force-app/main/default/objects/Demo_Custom__c/fields/Field_Five__c.field-meta.xml
<CustomField>
    <fullName>Field_Five__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Field Five</label>
    <type>Checkbox</type>
</CustomField>