force-app/main/default/objects/Demo_Custom__c/fields/Field_four__c.field-meta.xml
<CustomField>
    <fullName>Field_four__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Field_four</label>
    <type>Checkbox</type>
</CustomField>